--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Horários dos Operadores - JARVIS</title>
+  <link rel="icon" href="https://scontent.fcgh37-1.fna.fbcdn.net/v/t1.6435-9/149540413_4229359027127324_7880670425461037365_n.png?_nc_cat=110&ccb=1-7&_nc_sid=6ee11a&_nc_ohc=IscxFooegP0Q7kNvwFnyeEa&_nc_oc=AdmKc4X0_7eGPHjGmBQM9S0OSV66RFCT9-dPv4-Xnp1gLNaJRWhlwrIWDHBQ9Wi5Gfs&_nc_zt=23&_nc_ht=scontent.fcgh37-1.fna&_nc_gid=ik1j4GqhuVCUEY82pA7zJQ&oh=00_AfT6Xnjilfbs9TvBydfEuNvrtNkvFhGL8QtkXVgogBuKsw&oe=689F6523" type="image/png">
   <link rel="manifest" href="/site.webmanifest">
   <link rel="icon" href="/icon-192.png" type="image/png">
   <link rel="icon" href="favicon.ico" type="image/x-icon">
